# llm-injection-detector

./: .gitignore  LICENSE  README.md  git_instructions.txt  llm-prompt-injector.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py
prompt_injection_detector/: __init__.py  detector.py  models.py  rules.py
tests/: test_detector.py
